2000-04-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Re-enabled sound in Windows (Where did it go??)
	* added some more #ifndef WIN32 to the pragma's
	* added exult.exe to .cvsignore

2000-04-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Use correct frames for East-West walking animation.
	* Show signs, books, and scrolls.
	* Create monsters, and have them loiter.

2000-04-28  Tristan Tarrant  <tarrant_tristan@emc.com>

	* Testing of CVS commit mails...
	* gamedat.cc, gamewin.h: implement get_game_identity
	* gamewin.cc, exult.cc: generate initial gamedat before opening window.
	Also if static and gamedat identities don't match, recreate gamedat.
	* autogen.sh: clear old generated files first
	* configure.in: if I don't have kmid build without it anyway, don't
	tell me to run configure with --disable-kmid

2000-04-26  Tristan Tarrant  <tarrant_tristan@emc.com>

	* exult.cc: Implement 'h' key to show a simple help page
	* .cvsignore: added cvsignore files everywhere
	* ChangeLog: started changelog using standard GNU notation. Emacs 
	has a major mode which enables easy editing of this beast.
	* autogen.sh: script which generates automake/autoconf stuff.
	* configure.in: should not use acinclude.m4 as AC_INIT. Use exult.cc 
	instead.
	
	
