@@ -2,6 +2,7 @@
 	* Re-enabled sound in Windows (Where did it go??)
 	* added some more #ifndef WIN32 to the pragma's
 	* added exult.exe to .cvsignore
+	* added MIDI support for Windows
 
 2000-04-28  Jeff Freedman  <jeff@amy.nerble.net>
 
